--- a/online_shop/src/pages/details/details.html
+++ b/online_shop/src/pages/details/details.html
@@ -7,6 +7,7 @@
     <title>Product details</title>
 </head>
 <body>
+	
     <div class="navbar">
 			<div>
 				<a href="../../../index.html">Home</a>
@@ -15,7 +16,7 @@
 				<a href="../admin/admin.html">Admin</a>
 			</div>
 		</div>
-		<h1>Details page</h1>
-    
+		<div class="cart-by-id"></div>
+    <script type="module" src="details.js"></script>
 </body>
 </html>
