add to cart almost done

--- a/online_shop/index.html
+++ b/online_shop/index.html
@@ -9,16 +9,13 @@
   <body>
     <div id="container">
       <div class="navbar">
-			<div>
-				<a href="./index.html">Home</a>
-				<a href="./src/pages/details/details.html">Details</a>
-				<a href="./src/pages/cart/cart.html">Cart</a>
-				<a href="./src/pages/admin/admin.html">Admin</a>
-			</div>
-		</div>
-		<div class="carts-container">
-
-    </div>
+        <div>
+          <a href="./index.html">Home</a>
+          <a href="./src/pages/cart/cart.html">Cart</a>
+          <a href="./src/pages/admin/admin.html">Admin</a>
+        </div>
+      </div>
+      <div class="carts-container"></div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
