add prod to cart

--- a/online_shop/src/pages/cart/cart.html
+++ b/online_shop/src/pages/cart/cart.html
@@ -15,7 +15,7 @@
           <a href="../admin/admin.html">Admin</a>
         </div>
       </div>
-      <div id="cart"></div>
+      <div id="container"></div>
     </div>
     <script type="module" src="cart.js"></script>
   </body>
