--- a/online_shop/src/pages/cart/cart.html
+++ b/online_shop/src/pages/cart/cart.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="container">
@@ -15,7 +16,7 @@
           <a href="../admin/admin.html">Admin</a>
         </div>
       </div>
-      <div id="container"></div>
+      <div id="cart"></div>
     </div>
     <script type="module" src="cart.js"></script>
   </body>
