updatin nnumber of items, adding remove buttons

--- a/online_shop/src/pages/cart/cart.html
+++ b/online_shop/src/pages/cart/cart.html
@@ -18,6 +18,13 @@
       </div>
       <div id="cart"></div>
     </div>
+    <div class="total-and-buy">
+      <h3>No. items: <span id="noItems"></span></h3>
+      <h2>Total: <span id="total">0</span> RON</h2>
+      <button id="finishOrder">Proceed to check out</button>
+    </div>
+
+    
     <script type="module" src="cart.js"></script>
   </body>
 </html>
