--- a/online_shop/src/pages/details/details.html
+++ b/online_shop/src/pages/details/details.html
@@ -16,6 +16,10 @@
 			</div>
 		</div>
 		<div class="cart-by-id"></div>
+		<div class="message">
+			<p><span class="name"></span> has been successfully added to cart
+			</p>
+		</div>
     <script type="module" src="details.js"></script>
 </body>
 </html>
