--- a/online_shop/src/pages/cart/cart.html
+++ b/online_shop/src/pages/cart/cart.html
@@ -24,6 +24,11 @@
       <button id="finishOrder">Proceed to check out</button>
     </div>
 
+    <div class="thank-you-poust">
+      <h1>Order sent!</h1>
+      <h4>Thank you for choosing our services!</h4>
+    </div>
+
     
     <script type="module" src="cart.js"></script>
   </body>
