--- a/online_shop/src/pages/admin/admin.html
+++ b/online_shop/src/pages/admin/admin.html
@@ -35,7 +35,7 @@
     <div id="edit-product">
       <div class="edit-buttons-section">
         <h1>Edit product</h1>
-        <button id="edit">Edit</button>
+        <button id="edit" class="edit-btn">Edit</button>
         <button class="cancel-edit">Cancel</button>
       </div>
       <div>
@@ -68,7 +68,7 @@
       </div>
       <div>
         <label for="add-image">Image</label>
-        <input type="text" id="add-image" />
+        <input type="text" id="add-image">
       </div>
       <div>
         <label for="add-name">Name</label> <input type="text" id="add-name" />
