--- a/online_shop/src/pages/admin/admin.html
+++ b/online_shop/src/pages/admin/admin.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="add-product-buttons">
+      <div class="add-product-btn">
         <h1>Add product</h1>
         <button class="add-new-product-btn">+ Add new product</button>
       </div>
@@ -62,8 +62,8 @@
     <!-- Add porduct -->
     <div id="add-product">
       <div class="add-buttons-section">
-        <h1>Edit product</h1>
-        <button id="add">Edit</button>
+        <h1>Add product</h1>
+        <button id="add" class="add-product-btn-imput">Add</button>
         <button class="cancel-adding">Cancel</button>
       </div>
       <div>
